[package]
name = "rv"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
git2 = "0.20"

async-openai = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
indicatif = "0.18.0"
