[package]
name = "rv-tool"
description = " Non-invasive AI code review for any type of workflow"
version = "1.0.0-rc3"
edition = "2024"
authors = ["gi-dellav"]
readme = "README.md"
repository = "https://github.com/gi-dellav/rv"
homepage = "https://github.com/gi-dellav/rv"
license = "GPL-2.0-or-later"
keywords = ["coding", "tool", "cli", "ai", "llm"]


[dependencies]
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
git2 = "0.20"

#async-openai = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
indicatif = "0.18"
dirs = "6.0"
#rig-core = { version = "0.28.0", git = "https://github.com/0xPlaygrounds/rig", branch = "main" }
rig-core = "0.28.0"
rustyline = "17.0.2"
dialoguer = { version = "0.12.0", default-features = false }

[[bin]]
name = "rv"
path = "src/main.rs"
